syntax = "proto3";

package org.project_planton.app.stackupdate.v1;

import "google/protobuf/timestamp.proto";

// StackUpdate represents a Pulumi/Tofu/Terraform stack update.
// a stack update represents terraform refresh or plan or apply
message StackUpdate {
  // Unique identifier for the stack-update.
  string id = 1;

  // The cloud resource ID this stack-update is associated with.
  string cloud_resource_id = 2;

  // The status of the deployment (success, failed, in_progress).
  string status = 3;

  // Pulumi deployment output as JSON string containing: status, stdout, stderr, exit_code, timestamp, stack_fqdn, error
  string output = 4;

  // Timestamp when the stack-update was created.
  google.protobuf.Timestamp created_at = 5;

  // Timestamp when the stack-update was last updated.
  google.protobuf.Timestamp updated_at = 6;
}
