syntax = "proto3";

package org.project_planton.provider.aws.awss3bucket.v1;

import "buf/validate/validate.proto";

// AwsS3BucketSpec defines the specification required to deploy an AWS S3 Bucket with production-grade defaults.
// This message encapsulates all configurations necessary for setting up an S3 bucket following security best practices,
// including encryption, versioning, lifecycle policies, and access controls.
// Amazon S3 (Simple Storage Service) provides object storage through a web service interface,
// allowing you to store and retrieve any amount of data from anywhere on the web.
// With this specification, you can automate the creation and configuration of S3 buckets,
// ensuring that your storage resources are correctly set up according to your requirements.
// This is particularly useful for managing large-scale storage needs, hosting static websites,
// or storing data for backup and archiving.
message AwsS3BucketSpec {
  // Encryption type for the S3 bucket.
  enum EncryptionType {
    // Unspecified encryption defaults to SSE_S3 (AES-256) for security.
    ENCRYPTION_TYPE_UNSPECIFIED = 0;
    // Server-side encryption with Amazon S3-managed keys (AES-256).
    // This is the default AWS encryption and is free.
    ENCRYPTION_TYPE_SSE_S3 = 1;
    // Server-side encryption with AWS KMS keys.
    // Provides audit trails via CloudTrail and customer control over key management.
    ENCRYPTION_TYPE_SSE_KMS = 2;
  }

  // Storage class for lifecycle transitions.
  enum StorageClass {
    STORAGE_CLASS_UNSPECIFIED = 0;
    // Standard storage for frequently accessed data.
    STORAGE_CLASS_STANDARD = 1;
    // Infrequent Access storage for data accessed less than once per month.
    STORAGE_CLASS_STANDARD_IA = 2;
    // One Zone-IA for non-critical infrequently accessed data.
    STORAGE_CLASS_ONE_ZONE_IA = 3;
    // Intelligent-Tiering for unpredictable access patterns.
    STORAGE_CLASS_INTELLIGENT_TIERING = 4;
    // Glacier Instant Retrieval for archive data needing millisecond access.
    STORAGE_CLASS_GLACIER_INSTANT_RETRIEVAL = 5;
    // Glacier Flexible Retrieval for archive data (minutes to hours retrieval).
    STORAGE_CLASS_GLACIER_FLEXIBLE_RETRIEVAL = 6;
    // Glacier Deep Archive for long-term archival (12+ hours retrieval).
    STORAGE_CLASS_GLACIER_DEEP_ARCHIVE = 7;
  }

  // Lifecycle rule to automate storage transitions and expiration.
  message LifecycleRule {
    // Unique identifier for the rule.
    string id = 1 [(buf.validate.field).string.min_len = 1];
    // Whether the rule is enabled.
    bool enabled = 2;
    // Prefix filter for objects affected by this rule (e.g., "logs/").
    // Empty string applies to all objects in the bucket.
    string prefix = 3;
    // Days after creation to transition objects to the specified storage class.
    int32 transition_days = 4;
    // Target storage class for transition.
    StorageClass transition_storage_class = 5 [(buf.validate.field).enum.defined_only = true];
    // Days after creation to expire (delete) objects. 0 means no expiration.
    int32 expiration_days = 6;
    // Days after becoming noncurrent to expire old versions. Only applies if versioning is enabled.
    int32 noncurrent_version_expiration_days = 7;
    // Days to abort incomplete multipart uploads. Recommended: 7 days.
    int32 abort_incomplete_multipart_upload_days = 8;
  }

  // Cross-region or same-region replication configuration.
  message ReplicationConfiguration {
    // Whether replication is enabled.
    bool enabled = 1;
    // ARN of the IAM role that S3 assumes to replicate objects.
    // The role must have permissions to read from source bucket and write to destination.
    string role_arn = 2 [(buf.validate.field).string.min_len = 1];
    // Destination bucket for replication.
    message Destination {
      // ARN of the destination bucket (e.g., "arn:aws:s3:::destination-bucket").
      string bucket_arn = 1 [(buf.validate.field).string.min_len = 1];
      // Destination storage class. If not specified, uses source object's storage class.
      StorageClass storage_class = 2 [(buf.validate.field).enum.defined_only = true];
      // AWS account ID for cross-account replication. Leave empty for same-account.
      string account_id = 3;
    }
    // Destination configuration.
    Destination destination = 3 [(buf.validate.field).required = true];
    // Prefix filter for objects to replicate. Empty string replicates all objects.
    string prefix = 4;
    // Priority for replication rules. Higher numbers have higher priority.
    int32 priority = 5;
  }

  // Server access logging configuration.
  message LoggingConfiguration {
    // Whether logging is enabled.
    bool enabled = 1;
    // Target bucket for access logs. Must be in the same region.
    string target_bucket = 2 [(buf.validate.field).string.min_len = 1];
    // Prefix for log object keys (e.g., "logs/mybucket/").
    string target_prefix = 3;
  }

  // CORS (Cross-Origin Resource Sharing) configuration.
  message CorsConfiguration {
    // CORS rule.
    message CorsRule {
      // HTTP methods allowed (e.g., ["GET", "PUT", "POST"]).
      repeated string allowed_methods = 1 [(buf.validate.field).repeated.min_items = 1];
      // Origins allowed (e.g., ["https://example.com"]).
      repeated string allowed_origins = 2 [(buf.validate.field).repeated.min_items = 1];
      // Headers allowed in preflight requests.
      repeated string allowed_headers = 3;
      // Headers exposed to the browser.
      repeated string expose_headers = 4;
      // Time in seconds browser should cache preflight response.
      int32 max_age_seconds = 5;
    }
    // List of CORS rules.
    repeated CorsRule cors_rules = 1;
  }

  // The AWS region where the S3 bucket will be created.
  // This must be a valid AWS region where S3 is available.
  // Specifying the region is important because it affects data latency and costs.
  // For a list of AWS regions, see: https://aws.amazon.com/about-aws/global-infrastructure/regions_az/
  string aws_region = 1 [(buf.validate.field).string.min_len = 1];

  // Flag to indicate if the S3 bucket should have external (public) access.
  // When set to `true`, the bucket will be publicly accessible over the internet.
  // When set to `false` (default), Block Public Access is enabled (recommended for security).
  // Public access should be used cautiously to avoid unintended data exposure.
  // Even for public content, consider using CloudFront with Origin Access Control instead.
  bool is_public = 2;

  // Enable versioning to protect against accidental deletions and overwrites.
  // When enabled, S3 keeps all versions of an object. Recommended for production buckets.
  // Note: Versioning increases storage costs as each version is stored separately.
  // Use lifecycle policies to expire old versions and control costs.
  bool versioning_enabled = 3;

  // Encryption type for objects in the bucket.
  // Defaults to SSE_S3 (AES-256) if unspecified, which is free and provides strong encryption.
  // Use SSE_KMS for audit trails (CloudTrail logs key usage) and customer-managed key control.
  EncryptionType encryption_type = 4 [(buf.validate.field).enum.defined_only = true];

  // KMS key ID or ARN for SSE-KMS encryption.
  // Required when encryption_type is ENCRYPTION_TYPE_SSE_KMS.
  // Leave empty for ENCRYPTION_TYPE_SSE_S3.
  // Example: "arn:aws:kms:us-east-1:123456789012:key/12345678-1234-1234-1234-123456789012"
  string kms_key_id = 5;

  // Tags for resource governance, cost allocation, and organization.
  // Common tags: Environment (prod/staging), Project, Owner, CostCenter.
  // AWS allows up to 50 tags per bucket.
  map<string, string> tags = 6;

  // Lifecycle rules for automatic storage transitions and expiration.
  // Use lifecycle rules to:
  // - Move old objects to cheaper storage (Standard -> IA -> Glacier)
  // - Expire old logs or temporary data
  // - Delete old object versions to control costs
  // - Abort incomplete multipart uploads
  repeated LifecycleRule lifecycle_rules = 7;

  // Replication configuration for disaster recovery or compliance.
  // Cross-Region Replication (CRR): replicate to different region for disaster recovery.
  // Same-Region Replication (SRR): replicate to same region for cross-account backups or log aggregation.
  // Note: Requires versioning_enabled = true on both source and destination buckets.
  ReplicationConfiguration replication = 8;

  // Server access logging configuration.
  // Logs all requests made to the bucket for security audits and analytics.
  // Access logs are delivered to a separate bucket with some delay (minutes to hours).
  // Alternative: Use CloudTrail Data Events for real-time logging (higher cost for high-traffic buckets).
  LoggingConfiguration logging = 9;

  // CORS configuration for web applications.
  // Required when your web application hosted on one domain needs to access bucket content.
  // Example: React app on example.com accessing S3 bucket for images/files.
  CorsConfiguration cors = 10;

  // Force destroy the bucket even if it contains objects.
  // When true, all objects (including versions) are deleted before destroying the bucket.
  // WARNING: Use with caution! This is irreversible.
  // Recommended: false for production buckets to prevent accidental data loss.
  bool force_destroy = 11;
}
